k8s/istio/06-mutual-tls.yaml
# Globally enabling Istio mutual TLS in STRICT/PERMISSIVE mode
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default"
  namespace: "istio-system"
spec:
  mtls:
    mode: PERMISSIVE
