k8s/istio/01-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: security-app
spec:
  hosts:
  - security-app
  http:
  - route:
    - destination:
        host: security-app
        subset: v1
