k8s/istio/02-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: security-app
spec:
  host: security-app
  subsets:
  - name: v1
    labels:
      version: v1
