k8s/istio/02-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: restaurant
spec:
  hosts:
  - "*"
  gateways:
  - restaurant-gateway
  http:
  - match:
    - uri:
        prefix: /securityApi/
    route:
    - destination:
        host: security-app
        port:
          number: 3001
