k8s/istio/03-virtual-service-db.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: security-db
spec:
  hosts:
  - security-db
  tcp:
  -
    match:
    - port: 27017
    route:
    - destination:
        host: security-db
